--- a/src/components/Highway.css
+++ b/src/components/Highway.css
@@ -1,28 +1,47 @@
 .highway {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2c2c2c; /* Dark asphalt */
+  overflow: hidden;
+  z-index: 0;
+}
+
+/* Lane divider lines */
+.line {
+  position: absolute;
+  width: 4px;
+  height: 30px;
+  background: white;
+  animation: moveLines 1s linear infinite;
+  opacity: 0.8;
+  transform: translateX(-50%);
+}
+
+/* Side road stripes */
+.side-stripe {
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  background: white;
+  top: 0;
+  opacity: 0.6;
+  z-index: 1;
+}
+
+.left-stripe {
+  left: 5px;
+}
+
+.right-stripe {
+  right: 5px;
+}
+
+@keyframes moveLines {
+  0% {
+    top: -30px;
   }
-  
-  .line {
-    position: absolute;
-    left: 50%;
-    width: 4px;
-    height: 30px;
-    background: white;
-    transform: translateX(-50%);
-    animation: moveLines 1s linear infinite;
-    opacity: 0.8;
+  100% {
+    top: 500px;
   }
-  
-  @keyframes moveLines {
-    0% {
-      top: -30px;
-    }
-    100% {
-      top: 500px;
-    }
-  }
-  
+}
